--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ header{
     flex-direction: column;
     height: 8cm;
     width: 100%;
-    background-image: url(https://www.inicionet.com/wp-content/uploads/2019/02/banner-programacion-1030x450.jpg);
+    background-image: url(https://png.pngtree.com/thumb_back/fh260/background/20230713/pngtree-3d-render-illustration-of-software-development-and-programming-image_3860859.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
@@ -16,8 +16,29 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: #131515;
+    top: 0;
+    position: sticky;
+    z-index: 3;
+    border-bottom: 1px solid gray;
+}
+.header-section1 div h1{
+    font-size: 30px;
+    font-weight: 600;
     color: white;
-    
+    background-image: linear-gradient(-90deg,#caf0f8,#0096c7,#0077b6,#023e8a,#0077b6,#0096c7,#48cae4,#90e0ef,#ade8f4,#caf0f8);
+    background-clip: text;
+    color: transparent;
+    background-size: 1000%;
+    animation: color1 20s linear infinite;
+}
+@keyframes color1{
+    from{
+        background-position: 0% 500%;
+    }
+    to{
+        background-position:  750% 1000%;
+    }
 }
 .header-section1 div{
     display: flex;
@@ -35,6 +56,16 @@ header{
     justify-content: space-between;
     
 }
+.header-section1-nav div a button{
+    height: 1cm;
+    width: 4cm;
+    border: none;
+    border-radius: 20px;
+    font-size: 16px;
+    font-weight: 600;
+    color: white;
+    background-color: #083d77;
+}
 .header-section1 div nav ul{
     list-style: none;
     appearance: none;
@@ -45,9 +76,11 @@ header{
     text-decoration: none;
     color: white;
     font-size: 20px;
+    font-weight: 600;
 }
 .header-section1 div nav ul li{
-    margin-left: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 .header-section1 div nav ul li ul{
     display: none;
@@ -59,14 +92,17 @@ header{
     align-items: center;
     height: 8cm;
 }
+
 .header-section2 div h1{
-    font-size: 60px;
-    margin-bottom: -2px;
+    font-size: 50px;
+    font-weight: 700;
+    margin: 0;
 }
 .header-section2 div button{
     border: none;
     background: none;
-    font-size: 15px;
+    font-size: 20px;
+    font-weight: 600;
     color: white;
 }
 main{
@@ -85,26 +121,80 @@ main{
     justify-content: center;
     align-items: center;
     width: 50%;
-    border: 1px solid black;
-    background-color: black;
+    border:none;
+    background-color: #131515;
 }
 .main-section1-section1 form{
     display: flex;
     flex-direction: column;
-    background-color: rgba(255, 255, 255, 0.327);
+    background-color: #2b2c28;
     justify-content: center;
     align-items: center;
     border: 1px solid black;
+    border-radius: 5px;
     height: 18cm;
     width: 12cm;
+    color: white;
+}
+.form-div-title{
+    display: flex;
+    width: 10cm;
+    
+}
+.form-div-title h1{
+    font-size: 35px;
+    font-weight: 600;
+    margin: 0;
+    color: rgb(220, 220, 220);
+}
+.form-div-title h3{
+    margin: 0;
+    opacity: 0.7;
 }
 .main-section1-section1 form div{
     display: flex;
     flex-direction: column;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.main-section1-section1 form div label{
+    font-weight: 600;
+}
+.main-section1-section1 form div input{
+    height: 1cm;
+    width: 10cm;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-size: 16px;
+    color: white;
+    outline-color: #083d77;
+    border: 1px solid gray;
+    background-color: #373933;
+}
+.main-section1-section1 form div textarea{
+    height: 4cm;
+    width: 10cm;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-size: 16px;
+    color: white;
+    outline-color: #083d77;
+    border: 1px solid gray;
+    background-color: #373933;
+}
+.main-section1-section1 form div button{
+    height: 1.2cm;
+    width: 10cm;
+    border: none;
+    border-radius: 10px;
+    font-size: 1.3em;
+    font-weight: 600;
+    color: white;
+    background-color: #083d77;
 }
 .div-section{
     width: 50%;
-    background-color: black;
+    background-color: #131515;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -116,7 +206,7 @@ main{
     height: 18cm;
     justify-content: center;
     align-items: center;
-    background-color:black;
+    background-color:#131515;
     color: white;
 }
 
@@ -126,21 +216,36 @@ main{
     justify-content: space-around;
     margin-top: 20px;
 }
+.main-section1-section2 div div a h1{
+    margin: 0;
+}
 .main-section1-section2 div div a{
     display: flex;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 50px;
+    margin-right: 50px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-decoration: none;
     color: white;
 }
-.main-section1-section2 div p{
+.main-section1-section2 div .P{
     text-align: center;
+    font-size: 22px;
+}
+.main-section1-section2 div p{
+    margin: 0;
+    margin-bottom: 10px;
 }
 .section1-icon{
     height: 50px;
+}
+.Gen-section-developers{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #131515;
 }
 .Section-Developers{
     display: none;
@@ -148,6 +253,7 @@ main{
     height: 25cm;
     justify-content: space-around;
     align-items: center;
+    background-color: #131515;
 }
 .Section-Developers div{
     display: flex;
@@ -164,29 +270,180 @@ main{
     align-items: center;
     width: 8cm;
     height: 10cm;
+    background-color: #2b2c28;
     border: 1px solid black;
+    border-radius: 20px;
+    color: white;
 }
 .Section-Developers div .Card p{
     text-align: center;
 }
+.Section-Developers div .Card div  button{
+    height: 0.8cm;
+    width: 3cm;
+    border-radius: 15px;
+    border: none;
+    font-size: 15px;
+    font-weight: 600;
+    background-color: #083d77;
+}
+.Desarrollador-img{
+    height: 150px;
+    border-radius: 100%;
+}.developers-pop{
+    height: 60%;
+    width: 70%;
+    position: absolute;
+    background-color: #0a0908;
+    border: 2px solid white;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column
+}
+.Salir-developers-pop{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    height: 10%;
+}
+.Salir-developers-pop button{
+    background: none;
+    border: none;
+}
+.Salir-developers-pop button i{
+    font-size: 30px;
+    color: white;
+}
+.Gen-info-dev-pop{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 90%;
+    
+}
+.Info-developers-pop{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+.Info-developers-pop div h1{
+    font-size: 25px;
+    margin: 0;
+}
+.Info-developers-pop div p{
+    text-align: center;
+}
+.Formulario-developers{
+    height: 80%;
+    width: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #2b2c28;
+   border-top-left-radius: 20px;
+   border-bottom-left-radius: 20px;
+}
+.Formulario-developers form{
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+.Formulario-developers form div{
+    display: flex;
+    flex-direction: column;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+.Formulario-developers form div h1{
+    font-size: 25px;
+}
+.Formulario-developers form div input{
+    height: 0.6cm;
+    width: 6cm;
+    background-color: #373933;
+    border: 1px solid gray;
+    outline-color: #023e8a;
+}
+.Formulario-developers form div button{
+    height: 0.8cm;
+    width: 4cm;
+    font-size: 14px;
+    font-weight: 600;
+    border: none;
+    border-radius: 10px;
+    background-color: #0077b6;
+    margin-top: 10px;
+}
+.Icono-developers-pop a{
+    margin-left: 5px;
+    margin-right: 5px;
+}
+.Icono-developers-pop img{
+    height: 30px;
+}
+
 .main-section2{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 10cm;
-    background-color: black;
+    height: 16cm;
+    background-color: #0a0908;
+    
 }
 .main-section2 .MS-div1{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 1px solid black;
-    background-image: url(https://www.eude.es/wp-content/uploads/2018/05/Dise%C3%B1o-sin-t%C3%ADtulo-2021-05-11T165120.480.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 8cm;
+    height: 14cm;
     width: 60%;
+}
+
+.MS-div1-cont2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 20cm;
+    position: absolute;
+    z-index: 2;
+}
+.MS-div1 img{
+    height: 100%;
+    width: 100%; 
+    position: relative;
+    border-radius: 5px;
+    z-index: 1;
+    opacity: 0.5;
+    filter: blur(1px);
+}
+.MS-div1 div h3{
+    font-size: 20px;
+    color: white;
+    margin: 0;
+    opacity: 0.8;
+}
+.MS-div1 div h1{
+    font-size: 25px;
+    color: white;
+    text-align: center;
+    opacity: 0.9;
+}
+.MS-div1 div button{
+    height: 1.5cm;
+    width: 6cm;
+    border-radius: 20px;
+    font-size: 20px;
+    font-weight: 600;
+    color: white;
+    background-color: #083d77;
+    border: none;
 }
 footer{
     background-color: black;
@@ -205,18 +462,29 @@ footer{
     flex-direction: column;
     width: 40%;
 }
+
+.Fs1-div1-h{
+    display: flex;
+    align-items: baseline;
+}
+.Fs1-div1 div h1{
+    font-size: 80px;
+    color: #083d77;
+    margin: 0;
+    background-image: linear-gradient(-90deg,#caf0f8,#0096c7,#0077b6,#023e8a,#0077b6,#0096c7,#48cae4,#90e0ef,#ade8f4,#caf0f8);
+    color: transparent;
+    background-clip: text;
+    background-size: 1000%;
+    animation: color1 20s linear infinite;
+}
+
+.Fs1-div1 div p{
+    margin: 0;
+    margin-bottom: 10px;
+}
 .Fs1-div2 div{
     display: flex;
     flex-direction: column;
-}
-.img-l{
-    display: flex;
-    flex-direction: column;
-}
-.img-l img{
-    height: 100px;
-    width: 100px;
-    border-radius: 10px;
 }
 .Fs1-div2 div a{
     text-decoration: none;
@@ -227,16 +495,42 @@ footer{
 .Fs1-div1 .link{
     display: flex;
     flex-direction: row;
+    align-items: center;
+}
+.Fs1-div1 .link a{
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.link a{
+    align-items: center;
+}
+.facebook{
+    border-radius: 10px;height: 35px;
+}
+.Xred{
+    height: 45px;
+}
+.youtube{
+    height: 47px;
+}
+i{
+    font-size: 25px;
+    margin-right: 10px;
 }
 .Fs1-div3 div{
     display: flex;
     flex-direction: column;
 }
 .Fs1-div3 div a{
+    display: flex;
+    align-items: center;
     text-decoration: none;
     margin-top: 5px;
     margin-bottom: 5px;
     color: white;
+}
+.Fs1-div3 div a:hover{
+    color: #083d77;
 }
 .footer-section2{
     display: flex;
